fixing ui login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<ui-toolbar [isLoggedIn]="isLoggedIn" [title]="title" [sidenav]="sidenav" (logout)="logout($event)"></ui-toolbar>
-
+<ui-toolbar [isLoggedIn]="isLoggedIn" [title]="title" [sidenav]="sidenav" (logout)="logout()"></ui-toolbar>
 <mat-sidenav-container>
   <mat-sidenav [opened]="isSidenaveOpen(sidenav, isLoggedIn)" #sidenav mode="side" class="app-sidenav">
     <nav>
-      <a mat-button class="nav-link" *ngFor="let link of links"
-        [routerLink]="link.path" routerLinkActive="active">
+      <a mat-button class="nav-link" *ngFor="let link of links" [routerLink]="link.path" routerLinkActive="active">
         <mat-icon>{{link.icon}}</mat-icon>
         {{link.label}}
       </a>
