--- a/src/app/coures/course-details/course-details.component.html
+++ b/src/app/coures/course-details/course-details.component.html
@@ -2,43 +2,43 @@
   <mat-card-header>
     <mat-card-title>
       <h1>
-        <span *ngIf="selectedProject.id; else prompt">Editing {{originalTitle}}</span>
-        <ng-template #prompt>Create Project</ng-template>
+        <span *ngIf="selectedCourse.id; else prompt">Editing {{originalTitle}}</span>
+        <ng-template #prompt>Create Course</ng-template>
       </h1>
     </mat-card-title>
   </mat-card-header>
-  <form (submit)="saved.emit(selectedProject)">
+  <form (submit)="saved.emit(selectedCourse)">
     <mat-card-content>
       <mat-form-field class="full-width">
-        <input matInput placeholder="Title" [(ngModel)]="selectedProject.title" type="text" name="title">
+        <input matInput placeholder="Title" [(ngModel)]="selectedCourse.title" type="text" name="title">
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <textarea matInput placeholder="Details" [(ngModel)]="selectedProject.details" type="text" name="details"></textarea>
+        <textarea matInput placeholder="Details" [(ngModel)]="selectedCourse.details" type="text" name="details"></textarea>
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <mat-select placeholder="Customer" [(ngModel)]="selectedProject.customerId" name="customerId">
-          <mat-option *ngFor="let customer of customers" [value]="customer.id">
-            {{customer.firstName}} {{customer.lastName}}
+        <mat-select placeholder="Student" [(ngModel)]="selectedCourse.studentId" name="studentId">
+          <mat-option *ngFor="let student of students" [value]="student.id">
+            {{student.firstName}} {{student.lastName}}
           </mat-option>
         </mat-select>
       </mat-form-field>
 
       <section>
-        <h4>{{selectedProject.percentComplete}}% Completed</h4>
+        <h4>{{selectedCourse.percentComplete}}% Completed</h4>
         <mat-slider class="full-width" min="1" max="100" thumbLabel
-          [(ngModel)]="selectedProject.percentComplete" name="percentComplete">
+          [(ngModel)]="selectedCourse.percentComplete" name="percentComplete">
         </mat-slider>
       </section>
 
       <section>
-        <mat-checkbox [(ngModel)]="selectedProject.approved" name="approved">Approved by Customer</mat-checkbox>
+        <mat-checkbox [(ngModel)]="selectedCourse.approved" name="approved">Approved by Student</mat-checkbox>
       </section>
     </mat-card-content>
     <mat-card-actions>
       <button type="submit" mat-button color="primary">Save</button>
-      <button type="button" mat-button (click)="cancelled.emit(selectedProject)">Cancel</button>
+      <button type="button" mat-button (click)="cancelled.emit(selectedCourse)">Cancel</button>
     </mat-card-actions>
   </form>
 </mat-card>
