--- a/projects/ui-toolbar/src/lib/ui-toolbar.component.html
+++ b/projects/ui-toolbar/src/lib/ui-toolbar.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="logo">
-      <img src="assets/logo.png" alt="Logo">
+      <img src="assets/logo.png" style="width: 50px;height:50px;margin-top:5px" alt="Logo">
     </span>
     <span class="title">
       {{title}}
