--- a/src/app/coures/course-details/course-details.component.html
+++ b/src/app/coures/course-details/course-details.component.html
@@ -37,7 +37,7 @@
       </section>
     </mat-card-content>
     <mat-card-actions>
-      <button type="submit" mat-button color="primary">Save</button>
+      <button type="submit" mat-raised-button color="primary">Save</button>
       <button type="button" mat-button (click)="cancelled.emit(selectedCourse)">Cancel</button>
     </mat-card-actions>
   </form>
