fixing ui and images

--- a/src/app/coures/course-details/course-details.component.html
+++ b/src/app/coures/course-details/course-details.component.html
@@ -33,7 +33,7 @@
       </section>
 
       <section>
-        <mat-checkbox [(ngModel)]="selectedCourse.approved" name="approved">Approved by Student</mat-checkbox>
+        <mat-checkbox [(ngModel)]="selectedCourse.approved" name="approved">Approved by Instructor</mat-checkbox>
       </section>
     </mat-card-content>
     <mat-card-actions>
